@@ -25,6 +25,15 @@
 #include "ts/TestBox.h"
 #include <fstream>
 
+static IpEndpoint
+make_endpoint(const char * address)
+{
+  IpEndpoint ip;
+
+  assert(ats_ip_pton(address, &ip) == 0);
+  return ip;
+}
+
 REGRESSION_TEST(SSLCertificateLookup)(RegressionTest* t, int atype, int * pstatus)
 {
   TestBox       box(t, pstatus);
@@ -69,11 +78,68 @@ REGRESSION_TEST(SSLCertificateLookup)(RegressionTest* t, int atype, int * pstatu
   box.check(lookup.findInfoInHash("www.bar.com") == NULL, "host lookup for www.bar.com");
 }
 
+REGRESSION_TEST(SSLAddressLookup)(RegressionTest* t, int atype, int * pstatus)
+{
+  TestBox       box(t, pstatus);
+  SSLCertLookup lookup;
+
+  struct {
+    SSL_CTX * ip6;
+    SSL_CTX * ip6p;
+    SSL_CTX * ip4;
+    SSL_CTX * ip4p;
+  } context;
+
+  struct {
+     IpEndpoint ip6;
+     IpEndpoint ip6p;
+     IpEndpoint ip4;
+     IpEndpoint ip4p;
+  } endpoint;
+
+  context.ip6 = SSL_CTX_new(SSLv23_server_method());
+  context.ip6p = SSL_CTX_new(SSLv23_server_method());
+  context.ip4 = SSL_CTX_new(SSLv23_server_method());
+  context.ip4p = SSL_CTX_new(SSLv23_server_method());
+
+  endpoint.ip6 = make_endpoint("fe80::7ed1:c3ff:fe90:2582");
+  endpoint.ip6p = make_endpoint("[fe80::7ed1:c3ff:fe90:2582]:80");
+  endpoint.ip4 = make_endpoint("10.0.0.5");
+  endpoint.ip4p = make_endpoint("10.0.0.5:80");
+
+  box = REGRESSION_TEST_PASSED;
+
+  // For each combination of address with port and address without port, make sure that we find the
+  // the most specific match (ie. find the context with the port if it is available) ...
+
+  box.check(lookup.insert(context.ip6, endpoint.ip6), "insert IPv6 address");
+  box.check(lookup.findInfoInHash(endpoint.ip6) == context.ip6, "IPv6 exact match lookup");
+  box.check(lookup.findInfoInHash(endpoint.ip6p) == context.ip6, "IPv6 exact match lookup w/ port");
+
+  box.check(lookup.insert(context.ip6p, endpoint.ip6p), "insert IPv6 address w/ port");
+  box.check(lookup.findInfoInHash(endpoint.ip6) == context.ip6, "IPv6 longest match lookup");
+  box.check(lookup.findInfoInHash(endpoint.ip6p) == context.ip6p, "IPv6 longest match lookup w/ port");
+
+  box.check(lookup.insert(context.ip4, endpoint.ip4), "insert IPv4 address");
+  box.check(lookup.findInfoInHash(endpoint.ip4) == context.ip4, "IPv4 exact match lookup");
+  box.check(lookup.findInfoInHash(endpoint.ip4p) == context.ip4, "IPv4 exact match lookup w/ port");
+
+  box.check(lookup.insert(context.ip4p, endpoint.ip4p), "insert IPv4 address w/ port");
+  box.check(lookup.findInfoInHash(endpoint.ip4) == context.ip4, "IPv4 longest match lookup");
+  box.check(lookup.findInfoInHash(endpoint.ip4p) == context.ip4p, "IPv4 longest match lookup w/ port");
+}
+
 static unsigned
 load_hostnames_csv(const char * fname, SSLCertLookup& lookup)
 {
   std::fstream infile(fname, std::ios_base::in);
   unsigned count = 0;
+
+  // SSLCertLookup correctly handles indexing the same certificate
+  // with multiple names, an it's way faster to load a lot of names
+  // if we don't need a new context every time.
+
+  SSL_CTX * ctx = SSL_CTX_new(SSLv23_server_method());
 
   // The input should have 2 comma-separated fields; this is the format that you get when
   // you download the top 1M sites from alexa.
@@ -88,7 +154,6 @@ load_hostnames_csv(const char * fname, SSLCertLookup& lookup)
   while (!infile.eof()) {
     std::string line;
     std::string::size_type pos;
-    SSL_CTX * ctx = SSL_CTX_new(SSLv23_server_method());
 
     infile >> line;
     if (line.empty()) {
