@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.3.1
 
+
+  *) [TS-1500] let ssl_multicert.config specify sslcert per port
+
   *) [TS-1621] Adopt ConfigUpdateHandler pattern
      Author: Ethan Lai <yzlai@yahoo.com>
 
